# clinical-genomics

./: .gitignore  Dockerfile  README.md  Snakefile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: negation_cues.json
data/evaluation/: test_set.json
data/model_outputs/: evaluation_report.json
data/synthetic_notes/: README.md  note_01_seizures_hypotonia.txt  note_02_negated_findings.txt  note_03_multi_phenotype.txt  note_04_neuromuscular.txt  note_05_metabolic_disorder.txt
scripts/: generate_oncology_ehr.py  run_evaluation.py  train_adverse_event_model.py
src/: __init__.py  oncology_pipeline.py  pipeline.py
src/api/: __init__.py  main.py  routes.py  schemas.py
src/data/: __init__.py  build_hpo_db.py  generate_ehr.py
src/evaluation/: __init__.py  evaluator.py  test_set.py
src/extraction/: __init__.py  extractor.py  negation.py  oncology_extractor.py
src/mapping/: __init__.py  build_index.py  mapper.py
src/models/: __init__.py  adverse_event_model.py  model_card.py
tests/integration/: test_api.py  test_pipeline.py
tests/regression/: test_regression.py
tests/unit/: test_build_index.py  test_mapper.py  test_negation.py  test_schemas.py
