[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-phenotype-hpo-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
description = "Clinical Phenotype Extraction and HPO Mapping Pipeline"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "spacy>=3.7.4",
    "negspacy>=1.0.4",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.100.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
