[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-genomics-oncology-pipeline"
version = "0.2.0"
requires-python = ">=3.11"
description = "Clinical Phenotype Extraction, HPO Mapping, and Oncology Adverse Event Risk Pipeline"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "spacy>=3.7.4",
    "negspacy>=1.0.4",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    # Oncology ML extension
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "joblib>=1.3.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.100.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
